# MQTT

./: README.txt
MQTT64static/: Makefile  mqtt_client  mqtt_server
MQTTcustomTLSv4/: CMakeCache.txt  CMakeLists.txt  Makefile  broker  broker.c  client  client.c  duzenlenmis.odt  generate_certs.sh  mqtt_broker_old
MQTTcustomTLSv4/certs/: ca.crt  ca.key  client.crt  client.key  server.crt  server.key
